# arbitrage-agent-chatgpt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scanner.db
alembic/: env.py
alembic/versions/: 20260419_0001_initial_schema.py  20260420_0002_triage_results.py  20260420_0003_triage_llm_fields.py  20260420_0004_photo_review_fields.py  20260420_0005_market_check_fields.py
docs/: v1-craigslist-laptops-telegram.md
scanner/: __init__.py
scanner/apps/api/: main.py
scanner/apps/worker_alerts/: __init__.py  main.py
scanner/apps/worker_ingest/: __init__.py  craigslist_smoke.py  main.py
scanner/apps/worker_normalize/: __init__.py  main.py
scanner/apps/worker_underwrite/: __init__.py  craigslist_stage1.py  craigslist_stage2.py  craigslist_stage3.py  craigslist_stage4.py  main.py
scanner/libs/: __init__.py
scanner/libs/connectors/: __init__.py  base.py  craigslist.py  ebay.py  registry.py
scanner/libs/events/: __init__.py  bus.py
scanner/libs/metrics/: __init__.py  collector.py
scanner/libs/nlp/: __init__.py  entity_resolution.py  lots.py  openai_triage.py  risk.py  text.py  triage.py
scanner/libs/policy/: __init__.py  engine.py
scripts/: run_stack_smoke.py
sql/models/: recent_alerts.sql
tests/: conftest.py  test_craigslist.py  test_entity_resolution.py  test_market_check.py  test_normalization.py  test_openai_triage.py  test_photo_review.py  test_pipeline.py  test_policy.py  test_valuation.py
tests/fixtures/: ebay_item_detail.json  ebay_item_summary.json
(+20 files in other folders)
